Fix two pixel shift (Issue 7) Fixed Attach/Detach tabs (Issue 8) Made arrows point Up/Down instead of left/right

--- a/chrome/skin/winstripe/tabbrowser.css
+++ b/chrome/skin/winstripe/tabbrowser.css
@@ -59,7 +59,7 @@
   /*-moz-appearance: none;
   background: url("chrome://instantbird/skin/tabbrowser/tab-bkgnd.png") repeat-x;*/
   /*height: 22px;*/ max-height: 22px;
-  /*margin: 3px 0px 4px;*/ margin: 0px 4px 0px 3px;
+  /*margin: 3px 0px 4px;*/ /*margin: 0px 4px 0px 3px;*/ margin: 0px 2px 0px 3px; /* Fix border size changing so it doesn't shift everything 2px */
   /*padding: 0px 1px 1px 0px;*/ padding: 1px 0px 0px 1px;
   /*border: 2px solid;*/
   /*border-right-width: 1px;*/ border-right: none;
@@ -83,7 +83,7 @@
 }
 
 .tabbrowser-tab:not([selected="true"]):hover {
-  /*margin: 2px 0px 4px;*/ margin: 0px 4px 0px 2px;
+  /*margin: 2px 0px 4px;*/ /*margin: 0px 4px 0px 2px;*/ margin: 0px 2px 0px 2px; /* Fix border size changing so it doesn't shift everything 2px */
   /*padding: 2px 1px 1px;*/ padding: 1px 1px 1px 2px;
   /*background-image: url("chrome://instantbird/skin/tabbrowser/tab-hover-bkgnd.png");*/
 }
@@ -233,7 +233,7 @@
 }*/
 
 .tabbrowser-arrowscrollbox > .scrollbutton-up {
-  /*border-left-style: none;*/ border-bottom-style: none;
+  /*border-left-style: none;*/ border-left-style: 2px solid; border-top-style: none;
   /*list-style-image: url("chrome://instantbird/skin/tabbrowser/tab-arrow-left.png");*/
   /*-moz-border-radius-topright: 2px;*/ -moz-border-radius-topleft: 2px;
 }
@@ -249,7 +249,7 @@
 .tabbrowser-arrowscrollbox > .scrollbutton-down,
 .tabs-container > .tabs-newtab-button,
 .tabs-alltabs-button {
-  /*border-right-style: none;*/ border-top-style: none;
+  /*border-right-style: none;*/ border-right-style: 2px solid; border-bottom-style: none;
   /*-moz-border-radius-topleft: 2px;*/ -moz-border-radius-bottomleft: 2px;
 }
 
@@ -269,6 +269,11 @@
 /*.tabbrowser-arrowscrollbox > .scrollbutton-down[chromedir="rtl"] {
   list-style-image: url("chrome://instantbird/skin/tabbrowser/tab-arrow-left.png");
 }*/
+
+.tabbrowser-arrowscrollbox > .scrollbutton-up > .toolbarbutton-icon,
+.tabbrowser-arrowscrollbox > .scrollbutton-down > .toolbarbutton-icon {
+  -moz-transform: rotate(90deg);
+}
 
 /*.tabs-newtab-button {
   list-style-image: url(chrome://instantbird/skin/tabbrowser/newtab.png);
